New style for .border inputs

--- a/src/stylesheets/constants.styl
+++ b/src/stylesheets/constants.styl
@@ -21,5 +21,8 @@ LIST_PADDING_HORIZONTAL= (LIST_PADDING / 1.25)
 
 INDENT                 = 3%
 
+
 FORM_HEIGHT = 30px
-FORM_PROGRESS_HEIGHT = (FORM_HEIGHT / 2)
+FORM_border          = 2px
+FORM_border_height   = FORM_HEIGHT + (FORM_border * 4)
+FORM_PROGRESS_HEIGHT = 12px
