--- a/src/stylesheets/lungo.layout.styl
+++ b/src/stylesheets/lungo.layout.styl
@@ -24,6 +24,9 @@ body
     display-box()
     box-orient(vertical)
     height: inherit
+    // The "Go Faster" hack
+    webkit-transform: translate3d(0,0,0)
+
     & > header, > footer
       box-flex(0)
       z-index: 3
