--- a/example/components/lungo.theme/__init.styl
+++ b/example/components/lungo.theme/__init.styl
@@ -1,5 +1,4 @@
-@import "CSSmethods/vendor.styl"
-// @import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700")
+@import "../CSSmethods/vendor.styl"
 
 /* -------------------------- THEME -------------------------- */
 CONTENT         = #f5f5f5
@@ -7,7 +6,6 @@ COLOR           = #333
 COLOR_secondary = #95a5a6
 COLOR_cancel    = #e74c3c
 COLOR_success   = #2ecc71
-
 
 
 DARK            = #222
