--- a/src/stylesheets/lungo.widget.notification.styl
+++ b/src/stylesheets/lungo.widget.notification.styl
@@ -7,7 +7,7 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 
-@import "constants.styl"
+@import "__init.styl"
 
 LOADING = 104px
 WINDOW_WIDTH = 280px
