--- a/src/stylesheets/lungo.widget.form.styl
+++ b/src/stylesheets/lungo.widget.form.styl
@@ -7,7 +7,7 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 
-@import "constants.styl"
+@import "__init.styl"
 
 form, .form
 
