--- a/src/stylesheets/lungo.widget.pull.styl
+++ b/src/stylesheets/lungo.widget.pull.styl
@@ -7,7 +7,7 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 
-@import "constants.styl"
+@import "__init.styl"
 
 body > section.show > [data-control="pull"]
   position: absolute
