Changes on stylesheets

--- a/src/stylesheets/__init.styl
+++ b/src/stylesheets/__init.styl
@@ -12,6 +12,7 @@ TRANSITION_TIME        = 400ms
 
 FONT_SIZE_TINY         = 11px
 FONT_SIZE_SMALL        = 0.9em
+FONT_size_normal       = 1.0em
 FONT_SIZE_BIG          = 1.2em
 FONT_SIZE_LARGE        = 1.4em
 
