--- a/src/stylesheets/theme/theme.layout.styl
+++ b/src/stylesheets/theme/theme.layout.styl
@@ -19,7 +19,7 @@ body > section
 
   & > footer, & nav[data-control=groupbar]
     background-color: DARK
-    box-shadow inset 0 3px 0 DARK_dark
+    // box-shadow inset 0 3px 0 DARK_dark
   & > article, & > [data-control="pull"]
     background-color: CONTENT
     &.splash
