--- a/src/stylesheets/theme/__init.styl
+++ b/src/stylesheets/theme/__init.styl
@@ -1,13 +1,17 @@
 @import "../CSSmethods/vendor.styl"
 
-/* -------------------------- THEME -------------------------- */
+/* -------------------------- COLOUR -------------------------- */
 CONTENT         = #f5f5f5
 COLOR           = #333
 COLOR_secondary = #95a5a6
 COLOR_cancel    = #e74c3c
 COLOR_success   = #2ecc71
 
+THEME           = #0093D5
+THEME_light     = lighten(THEME, 15%)
+THEME_dark      = darken(THEME, 15%)
 
+/* ------------------------- COLOUR ------------------------- */
 DARK            = #222
 DARK_light      = lighten(DARK, 25%)
 DARK_dark       = darken(DARK, 15%)
@@ -15,19 +19,16 @@ DARK_darkest    = darken(DARK, 30%)
 LIST_color      = lighten(COLOR, 5%)
 LIST_color_2nd  = lighten(COLOR, 35%)
 LIST_border     = lighten(COLOR, 90%)
-NAV_LINK        = #888
+NAV_LINK        = lighten(DARK, 25%)
 NAV_LINK_ACTIVE = #FFF
-THEME           = #0093D5
-THEME_light     = lighten(THEME, 15%)
-THEME_dark      = darken(THEME, 15%)
 
+/* ------------------------- TRANSITION ------------------------- */
+TRANSITION_time        = 400ms
+TRANSITION_easing      = ease
 
+/* ------------------------- RADIUS ------------------------- */
 BORDER_radius   = 2px
-
 /* -------------------------- FORM -------------------------- */
-FORM_color      = darken(#e5e5e5, 5%)
-// FORM_color = #dce4ec
-
-
+FORM_color         = darken(#e5e5e5, 5%)
 FORM_border        = 2px
-FORM_border_radius = 4px
+FORM_border_radius = (BORDER_radius * FORM_border)
