--- a/src/stylesheets/theme/theme.layout.nav.styl
+++ b/src/stylesheets/theme/theme.layout.nav.styl
@@ -17,20 +17,20 @@ nav
       &:active
         color: darken(THEME, 50%)
 
-  section > &[data-control=groupbar] > a.active
-    box-shadow inset 0 -3px 0 THEME
-
   section > footer > & > a, &[data-control=groupbar] > a
     color: NAV_LINK
     &.active
       color: NAV_LINK_ACTIVE
 
+  section > &[data-control=groupbar] > a.active
+    transition box-shadow TRANSITION_time TRANSITION_easing
+    box-shadow inset 0 -4px 0 THEME
+
   section > footer > & > a
-    box-shadow 1px 0 0 DARK_dark
+    box-shadow inset 0 1px 0 #000, inset 0 2px 0 lighten(DARK, 20%)
     &.active
-      color:  NAV_LINK_ACTIVE
+      box-shadow inset 0 0 16px #000
       background-color: DARK_dark
-      box-shadow inset 0 3px 0 THEME
 
   aside & a
     color: lighten(DARK, 20%)
