--- a/src/stylesheets/theme/theme.widget.button.styl
+++ b/src/stylesheets/theme/theme.widget.button.styl
@@ -8,27 +8,27 @@
  */
 
 @import "__init.styl"
+.button, button
+  border-radius (BORDER_radius * 2)
 
 header
   & .button, button
     color: #fff
     background-color: THEME_dark
     box-shadow 0 1px 0 lighten(THEME, 15%), inset 0 1px 0 darken(THEME, 35%)
-    border-radius (BORDER_radius * 2)
     &:active
       background-color: darken(THEME, 40%)
 
 article
   & .button, button
     color: #fff !important
-    border-radius (BORDER_radius * 2)
     box-shadow inset 0 1px 0 rgba(255,255,255,0.25), 0 1px 1px rgba(0,0,0,0.15)
     // border: solid 1px rgba(0,0,0,0.1)
     &:active
       box-shadow inset 0 0 128px rgba(0,0,0,0.25)
       border-color: none
     &, abbr
-      font-weight: 400
+      font-weight: 600
     & .icon
       opacity: 0.65
       text-shadow: 0 -1px 0 rgba(0,0,0,0.25)
