--- a/src/stylesheets/theme/theme.widget.styl
+++ b/src/stylesheets/theme/theme.widget.styl
@@ -12,14 +12,23 @@
 [data-control="pull"]
     text-shadow: 0 1px 0 #fff
 
-/* -------------------------- TAG -------------------------- */
+/* =================================  TAG  ================================= */
 .tag:not(.icon)
   color: #fff
   border-radius BORDER_radius
   font-weight: 700 !important
   &.count
-    background-color: THEME
+    background-color: COLOR_theme
   header .count
-    background-color: THEME-dark !important
+    background-color: COLOR_theme-dark !important
   footer &
     box-shadow inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5)
+
+/* ===============================  MESSAGE  =============================== */
+body > section > article > .empty
+  & > .icon, > small
+    color: darken(BACKGROUND, 20%)
+    text-shadow: 0 1px 0 lighten(BACKGROUND, 90%)
+  & > strong
+    color: darken(BACKGROUND, 40%)
+    text-shadow: 0 2px 0 lighten(BACKGROUND, 90%)
