--- a/src/stylesheets/theme/theme.layout.styl
+++ b/src/stylesheets/theme/theme.layout.styl
@@ -10,32 +10,35 @@
 @import "__init.styl"
 
 body > section
-  background-color: DARK
+  background-color: COLOR_contrast
   & > header
-    background-color: THEME
-    box-shadow 0 2px 0 rgba(0,0,0,0.15), inset 0 1px 0 THEME_light, inset 0 -1px 0 THEME_dark
+    C = COLOR_theme
+    background-color: COLOR_theme
+    box-shadow 0 2px 0 rgba(0,0,0,0.15), inset 0 1px 0 lighten(C, 20%), inset 0 -1px 0 darken(C, 20%)
     color: #fff
     border-radius (BORDER_radius * 2.5) (BORDER_radius * 2.5) 0 0
+    & > .title
+      font-weight: 700
 
   & > footer, & nav[data-control=groupbar]
-    background-color: DARK
-    // box-shadow inset 0 3px 0 DARK_dark
+    background-color: COLOR_contrast
+    // box-shadow inset 0 3px 0 COLOR_contrast_dark
   & > article, & > [data-control="pull"]
-    background-color: CONTENT
+    background-color: BACKGROUND
     &.splash
-      background: THEME
+      background: COLOR_theme
       color: #fff
   &.aside
     box-shadow -1px 0 2px rgba(0,0,0,0.2)
     &.right
       box-shadow 1px 0 2px rgba(0,0,0,0.2)
 
-DARKEST = darken(DARK_darkest, 15%)
+COLOR_contrastEST = darken(COLOR_contrast_darkest, 15%)
 body > aside
-  background-color: DARK_dark
+  background-color: COLOR_contrast_dark
   color: #fff
   & > header, > footer
-    background-color: DARK_darkest
+    background-color: COLOR_contrast_darkest
   & > header
-    box-shadow 0 1px 3px rgba(0,0,0,0.25), inset 0 1px 0 DARK, inset 0 -1px 0 DARKEST
+    box-shadow 0 1px 3px rgba(0,0,0,0.25), inset 0 1px 0 COLOR_contrast, inset 0 -1px 0 COLOR_contrastEST
 
