--- a/src/stylesheets/theme/theme.widget.button.styl
+++ b/src/stylesheets/theme/theme.widget.button.styl
@@ -14,15 +14,15 @@
 header
   & .button, button
     color: #fff
-    background-color: THEME_dark
-    box-shadow 0 1px 0 lighten(THEME, 15%), inset 0 1px 0 darken(THEME, 35%)
+    background-color: darken(COLOR_theme, 15%)
+    box-shadow 0 1px 0 lighten(COLOR_theme, 15%), inset 0 1px 0 darken(COLOR_theme, 35%)
     &:active
-      background-color: darken(THEME, 40%)
+      background-color: darken(COLOR_theme, 40%)
 
 article
   & .button, button
     color: #fff !important
-    box-shadow inset 0 1px 0 rgba(255,255,255,0.25), 0 1px 1px rgba(0,0,0,0.15)
+    box-shadow inset 0 1px 0 rgba(255,255,255,0.15), 0 1px 1px rgba(0,0,0,0.15)
     // border: solid 1px rgba(0,0,0,0.1)
     &:active
       box-shadow inset 0 0 128px rgba(0,0,0,0.25)
@@ -35,7 +35,7 @@ article
 
   & button, .button, .tag:not(.icon)
     &
-      background-color: THEME_dark
+      background-color: darken(COLOR_theme, 15%)
     &.secondary
       background-color: COLOR_secondary
     &.accept
