--- a/src/stylesheets/theme/theme.widget.button.styl
+++ b/src/stylesheets/theme/theme.widget.button.styl
@@ -23,7 +23,8 @@ article
   & .button, button
     color: #fff !important
     box-shadow inset 0 1px 0 rgba(255,255,255,0.15), 0 1px 1px rgba(0,0,0,0.15)
-    // border: solid 1px rgba(0,0,0,0.1)
+    border: solid 1px rgba(0,0,0,0.1)
+    text-shadow: 0 1px 0 rgba(0,0,0,0.1)
     &:active
       box-shadow inset 0 0 128px rgba(0,0,0,0.25)
       border-color: none
@@ -46,3 +47,4 @@ article
       background: FORM_color
       color: #999 !important
       box-shadow: none !important
+      text-shadow: none !important
