--- a/src/stylesheets/theme/theme.widget.styl
+++ b/src/stylesheets/theme/theme.widget.styl
@@ -26,9 +26,9 @@
 
 /* ===============================  MESSAGE  =============================== */
 body > section > article > .empty
+  & > .icon, > strong, > small
+    text-shadow: 0 1px 0 lighten(BACKGROUND, 95%)
   & > .icon, > small
     color: darken(BACKGROUND, 20%)
-    text-shadow: 0 1px 0 lighten(BACKGROUND, 90%)
   & > strong
     color: darken(BACKGROUND, 40%)
-    text-shadow: 0 2px 0 lighten(BACKGROUND, 90%)
